--- a/css/style.css
+++ b/css/style.css
@@ -33,20 +33,45 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; 
 }
 
-.fa {
-    padding: 20px;
-    font-size: 30px;
+.paraImage {
+    background: rgba(255,255,255,0.3);
+    overflow: hidden;
+    height: 100%;
+    z-index: 2;
+}
+
+.btn-circle {
+    width: 60px;
+    height: 60px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+    background: transparent;
+    border: 2px solid white;
+}
+
+/*
+Smaller version: 
+.btn-circle {
     width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
     text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-    
-    background-color: darkblue
-}
+    font-size: 12px;
+    line-height: 1.42857;
 
-.fa:hover {
-    opacity: 0.7;
+Bigger version:
+.btn-circle {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
 }
+}*/
