--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.navbar {
-    height: 5%;
-}
-
 .bg-dark.navbar { 
     background: transparent !important;
     transition: 0.3s ease;
@@ -72,3 +68,7 @@ Bigger version:
     line-height: 1.33;
 }
 }*/
+
+.about {
+    background-color: #2b3036;
+}
